# ml_instruments

./: .gitignore  README.md  pyproject.toml
models/: model_scripted.pt  model_scripted_epochs-40.pt
notebooks/: ClearML.ipynb  ClearML_practice-HARD.ipynb  ClearML_practice.ipynb  LIghtning_Advanced.ipynb  Lightning_intro.ipynb  Lightning_practice.ipynb  M1_ClearML.ipynb  M1_ClearML_practice-HARD.ipynb  M1_ClearML_practice.ipynb  M2.1_Lightning_intro.ipynb  M2.1_Lightning_practice.ipynb  M2.2_Trainer.ipynb  M2.2_Trainer_practice.ipynb  M3.1_Lightning_ClearML_NLP.ipynb  M3.2_LTNG_CML_CV_practice.ipynb  M3.2_Lightning_ClearML_CV.ipynb  M3.2_practice-SOLUT.ipynb  M3.3_Lightning_Advanced.ipynb  M3.4.1_Hyperparameter_search.ipynb  M3.4.1_image_classification_CIFAR10.ipynb  M3.4_ClearML_Advanced.ipynb  Trainer.ipynb  train_script.py  М1_ClearML.ipynb  М1_ClearML_practice-HARD.ipynb
